--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <title>Upload new Files</title>
-  <h1>Upload new Fixture and Plate Files</h1>
-  <form method=post enctype=multipart/form-data>
-    <p>Fixture File</p>
-    <input type=file name=file class='fixture-input'><br>
-    <p>Plate File</p>
-    <input type="file" name='file[]' multiple='' class='plate-input'><br>
-    <br>
-    <input type=submit value=Upload>
-  </form>
+  <head>
+    <meta charset='utf-8'>
+    <title>Flatplate Report Generator</title>
+    <link rel="stylesheet" href="static/styles.css"/>
+  </head>
+  <body>
+    <header class='header'>
+      <h1>Flatplate Thickness Report Generator</h1>
+    </header>
+    <main class='main'>
+      <h2>Upload new Fixture and Plate Files</h2>
+      <form method=post enctype="multipart/form-data">
+        <div class='name-div'>
+          <label for="username">Scanner Name</label>
+          <input type="text" id='username' name='username'>
+        </div>
+        <div class='upload-div'>
+          <div class='upload-file'>
+            <p>Fixture File</p>
+            <input type=file name=file class='fixture-input'>
+          </div>
+          <div class='upload-file'>
+            <p>Plate Files (1 or more)</p>
+            <input type="file" name='file[]' multiple='' class='plate-input'>
+          </div>
+        </div>
+        <input type=submit value=Upload class='submit-button'>
+      </form>
+    </main>
+    <div class='instruction-div'>
+      <p>1. Enter name of the person who scanned the plates</p>
+      <p>2. Select the fixture file (.xyz) by pressing 'Choose File'</p>
+      <p>3. Select one or multiple plate files (.xyz) by pressing 'Choose File'</p>
+      <p>4. Press the 'Upload' button. A zipped folder containing all reports will automatically download.</p>
+    </div>
+  </body>
 </html>
-
-<!--
-  <p>Fixutre File</p>
-  <input type=file name=file class='fixture-input'><br>
-  <p>Plate File</p>
-  <input type="file" name="file[]" multiple="" class="plate-input"><br>
-  <br>
--->
