--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,10 @@
       <p>2. Select the fixture file (.xyz) by pressing 'Choose File'</p>
       <p>3. Select one or multiple plate files (.xyz) by pressing 'Choose File'</p>
       <p>4. Press the 'Upload' button. A zipped folder containing all reports will automatically download.</p>
+
     </div>
   </body>
+  <div class='author'>
+    <p>Author: Brendan Lee lee3420@purdue.edu</p>
+  </div>
 </html>
