Added options for ply thickness

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,17 @@
             <input type="file" name='file[]' multiple='' class='plate-input'>
           </div>
         </div>
+        <div class='option-div'>
+          <p>Select Number of Ply</p>
+          <input type="radio" id="noply" name="ply-buttons" value="noply">
+          <label for="vehicle1">Not Specified</label><br>
+          <input type="radio" id="3ply" name="ply-buttons" value="3ply" checked>
+          <label for="vehicle1">3-Ply Plate</label><br>
+          <input type="radio" id="4ply" name="ply-buttons" value="4ply">
+          <label for="vehicle1">4-Ply Plate</label><br>
+          <input type="radio" id="5ply" name="ply-buttons" value="5ply">
+          <label for="vehicle1">5-Ply Plate</label><br>
+        </div>
         <input type=submit value=Upload class='submit-button'>
       </form>
     </main>
@@ -38,6 +49,6 @@
     </div>
   </body>
   <div class='author'>
-    <p>Author: Brendan Lee lee3420@purdue.edu</p>
+    <p>Author: Brendan Lee, Purdue Univeristy 2021</p>
   </div>
 </html>
